@@ -25,7 +25,7 @@ pytest-cache = 1.0
 pytest-capturelog = 0.7
 pytest-codecheckers = 0.2
 pytest-cov = 1.8.1
-pytest-timeout = 0.4
+pytest-timeout = 0.5
 pytz = 2014.10
 requests = 2.6.0
 setuptools = 18.3.1
